vendor/cargo/ringbuffer-0.14.2/tests/compile-fail/test_const_generic_array_zero_length.rs
extern crate ringbuffer;

use ringbuffer::ConstGenericRingBuffer;

fn main() {
    let _ = ConstGenericRingBuffer::<i32, 0>::new();
    //~^ note: the above error was encountered while instantiating `fn ringbuffer::ConstGenericRingBuffer::<i32, 0>::new`
    // ringbuffer can't be zero length
}